<?xml version="1.0"?>
<package format="2">
  <name>exercise_3_1</name>
  <version>0.1.0</version>
  <description>The exercise_3_1 package</description>

  <maintainer email="carlatm_9@hotmail.com">Carla</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

</package>
